[package]
name = "reverie"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
derive_more = { version = "1.0.0", features = ["from", "display"] }
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
iced_futures = { version = "0.13.2", features = ["tokio"] }
md5 = "0.7.0"
socket2 = "0.5.7"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
flate2 = { version = "1.0.35", features = ["zlib-ng"], default-features = false }
